api/src/main/java/com/example/api/error/YachtNotFoundError.java
package com.example.api.error;

import com.example.api.base.BaseError;
import org.springframework.http.HttpStatus;

public class YachtNotFoundError implements BaseError {

    @Override
    public HttpStatus getErrorCode() {
        return HttpStatus.NOT_FOUND;
    }

    @Override
    public String getErrorMessage() {
        return "Yacht not available!";
    }
}
